--- a/templates/browscap.ini.j2
+++ b/templates/browscap.ini.j2
@@ -1,3 +1,4 @@
+;;; {{ ansible_managed }}
 ;;; Provided courtesy of http://browscap.org/
 ;;; Created on Thursday, September 22, 2016 at 11:59 AM UTC
 ;;; Keep up with the latest goings-on with the project:
