Added include path

--- a/templates/pool-template.conf.j2
+++ b/templates/pool-template.conf.j2
@@ -14,6 +14,7 @@ pm.process_idle_timeout = {{ item.config.process_idle_timeout | default("60s") }
 request_terminate_timeout = 0
 request_slowlog_timeout = 0
 php_admin_value[error_log] = {{ item.config.error_log }}
+php_admin_value[include_path] = {{ item.config.include_path | default('.') }}
 slowlog = {{ item.config.slow_log }}
 pm.status_path = /php_status
 rlimit_core = unlimited
