[NSO-211] Switch php-fpm config to ondemand

--- a/templates/pool-template.conf.j2
+++ b/templates/pool-template.conf.j2
@@ -4,11 +4,8 @@ listen = {{ backnet_addr }}:{{ php_fpm_port }}
 user = {{ item.user }}
 group = {{ item.group }}
 catch_workers_output = no
-pm = dynamic
+pm = ondemand
 pm.max_children = {{ item.config.max_children | default(32) }}
-pm.start_servers = {{ item.config.start_servers | default(8) }}
-pm.min_spare_servers = {{ item.config.min_spare_servers | default(8) }}
-pm.max_spare_servers = {{ item.config.max_spare_servers | default(16) }}
 pm.max_requests = {{ item.config.max_requests | default(10240) }}
 pm.process_idle_timeout = {{ item.config.process_idle_timeout | default("60s") }}
 request_terminate_timeout = 0
